Adds the migration API service (#2)
